--- a/public/src/less/my/orderList.less
+++ b/public/src/less/my/orderList.less
@@ -70,6 +70,11 @@ body,html {
 							color: #3E4D55;
 							border-bottom: 1px solid #E7E7EB;
 							padding: 14px 0 14px 20px;
+							a {
+								font-size: 14px;
+								color: #3E4D55;
+								margin-right: 24px;
+							}
 						}
 						th {
 							background-color: #F4F5F9;
