--- a/views/common/my/header.ejs
+++ b/views/common/my/header.ejs
@@ -2,7 +2,7 @@
   <a href="/" class="logo"></a>
   <div class="user-info">
     <div class="top clearfix">
-      <img class="user-head" src="" alt="" />
+      <!-- <img class="user-head" src="" alt="" /> -->
       <p class="user-cname"><%= cname %></p>
     </div>
   </div>
