--- a/views/my/orderList.ejs
+++ b/views/my/orderList.ejs
@@ -22,7 +22,7 @@
           </div>
           <div class="tab-contents">
             <div class="tab-content active">
-              <table width="100%" cellpadding="0" cellspacing="1">
+              <table width="100%" cellpadding="0" cellspacing="0">
                 <thead>
                   <tr>
                     <th>候选人姓名</th>
@@ -35,89 +35,184 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <td>沈琪</td>
+                    <td>丁伟杰</td>
                     <td>履历核实</td>
                     <td>2018-03-13</td>
                     <td>-100</td>
                     <td>等待结果</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10001" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>王一俊</td>
+                    <td>黄雁</td>
                     <td>履历核实</td>
                     <td>2018-03-12</td>
                     <td>-100</td>
                     <td>等待回复</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10002" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>颜丹晨</td>
+                    <td>张波</td>
                     <td>履历核实</td>
                     <td>2018-03-11</td>
                     <td>-100</td>
                     <td>等待结果</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10003" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>孔蕾蕾</td>
+                    <td>徐铭杨</td>
                     <td>履历核实</td>
                     <td>2018-03-11</td>
                     <td>-100</td>
                     <td>等待结果</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10004" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>汪一池</td>
+                    <td>宋秀魁</td>
                     <td>履历核实</td>
                     <td>2018-02-27</td>
                     <td>-100</td>
                     <td>等待回复</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10005" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>苏行进</td>
+                    <td>李林</td>
                     <td>履历核实</td>
                     <td>2018-02-25</td>
                     <td>-100</td>
                     <td>等待结果</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10006" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>林高真</td>
+                    <td>孔百灵</td>
                     <td>履历核实</td>
                     <td>2018-02-17</td>
                     <td>-100</td>
                     <td>等待核实</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10007" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>杨红</td>
+                    <td>胡大鹏</td>
                     <td>履历核实</td>
                     <td>2018-02-14</td>
                     <td>-100</td>
                     <td>等待结果</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10008" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>谢俊良</td>
+                    <td>陈仓雄</td>
                     <td>履历核实</td>
                     <td>2018-02-13</td>
                     <td>-100</td>
                     <td>等待结果</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10009" target="_blank">详情</a></td>
                   </tr>
                   <tr>
-                    <td>朱玲玲</td>
+                    <td>莫娜</td>
                     <td>履历核实</td>
                     <td>2018-02-10</td>
                     <td>-100</td>
                     <td>等待回复</td>
-                    <td>详情</td>
+                    <td><a href="/my/send/info/10010" target="_blank">详情</a></td>
                   </tr>
                 </tbody>
               </table>
             </div>
-            <div class="tab-content"></div>
+            <div class="tab-content">
+              <table width="100%" cellpadding="0" cellspacing="0">
+                <thead>
+                  <tr>
+                    <th>候选人姓名</th>
+                    <th>背调类型</th>
+                    <th>发起时间</th>
+                    <th>奖励积分</th>
+                    <th>背调状态</th>
+                    <th>操作</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>刘小美</td>
+                    <td>履历核实</td>
+                    <td>2018-03-13</td>
+                    <td>100</td>
+                    <td>未回复</td>
+                    <td><a href="/my/receive/info/10001" target="_blank">详情</a><a href="/my/reply/10001" target="_blank">回复</a></td>
+                  </tr>
+                  <tr>
+                    <td>王帅</td>
+                    <td>履历核实</td>
+                    <td>2018-03-12</td>
+                    <td>100</td>
+                    <td>未回复</td>
+                    <td><a href="/my/receive/info/10002" target="_blank">详情</a><a href="/my/reply/10002" target="_blank">回复</a></td>
+                  </tr>
+                  <tr>
+                    <td>杜杰</td>
+                    <td>履历核实</td>
+                    <td>2018-03-11</td>
+                    <td>100</td>
+                    <td>未回复</td>
+                    <td><a href="/my/receive/info/10003" target="_blank">详情</a><a href="/my/reply/10003" target="_blank">回复</a></td>
+                  </tr>
+                  <tr>
+                    <td>王莹莹</td>
+                    <td>履历核实</td>
+                    <td>2018-03-11</td>
+                    <td>100</td>
+                    <td>已回复</td>
+                    <td><a href="/my/receive/info/10004" target="_blank">详情</a></td>
+                  </tr>
+                  <tr>
+                    <td>谭星</td>
+                    <td>履历核实</td>
+                    <td>2018-02-27</td>
+                    <td>100</td>
+                    <td>已回复</td>
+                    <td><a href="/my/receive/info/10005" target="_blank">详情</a></td>
+                  </tr>
+                  <tr>
+                    <td>莘威</td>
+                    <td>履历核实</td>
+                    <td>2018-02-25</td>
+                    <td>100</td>
+                    <td>已回复</td>
+                    <td><a href="/my/receive/info/10006" target="_blank">详情</a></td>
+                  </tr>
+                  <tr>
+                    <td>杨淋舒</td>
+                    <td>履历核实</td>
+                    <td>2018-02-17</td>
+                    <td>100</td>
+                    <td>已回复</td>
+                    <td><a href="/my/receive/info/10007" target="_blank">详情</a></td>
+                  </tr>
+                  <tr>
+                    <td>张怀雯</td>
+                    <td>履历核实</td>
+                    <td>2018-02-14</td>
+                    <td>100</td>
+                    <td>已回复</td>
+                    <td><a href="/my/receive/info/10008" target="_blank">详情</a></td>
+                  </tr>
+                  <tr>
+                    <td>师永立</td>
+                    <td>履历核实</td>
+                    <td>2018-02-13</td>
+                    <td>100</td>
+                    <td>已回复</td>
+                    <td><a href="/my/receive/info/10009" target="_blank">详情</a></td>
+                  </tr>
+                  <tr>
+                    <td>陈兵</td>
+                    <td>履历核实</td>
+                    <td>2018-02-10</td>
+                    <td>100</td>
+                    <td>已回复</td>
+                    <td><a href="/my/receive/info/10010" target="_blank">详情</a></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
         <div class="list-page">
