--- a/views/my/points.ejs
+++ b/views/my/points.ejs
@@ -14,12 +14,12 @@
       <div class="main-wrap">
         <h2 class="main-title">背调积分</h2>
         <p class="point">1000</p>
-        <div class="funcs"><a href="javascript:;" class="btn-cz">充值</a><a href="javascript:;" class="btn-tx">提现</a></div>
+        <div class="funcs"><a href="javascript:;" class="btn-cz">充值</a></div>
         <div class="remark">
           <i class="iconfont chainio-icon-gantanhao"></i>
           <ul>
             <li>背调积分可用于发起背调并且支付费用</li>
-            <li>背调积分可以提现</li>
+            <!-- <li>背调积分可以提现</li> -->
             <li>其他相关的说明</li>
           </ul>
         </div>
@@ -56,9 +56,9 @@
             </tr>
             <tr>
               <td>2018-02-20</td>
-              <td>提现</td>
-              <td>-200</td>
-              <td>正在提现中</td>
+              <td>回复背调</td>
+              <td>+100</td>
+              <td>回复成功</td>
             </tr>
             <tr>
               <td>2018-02-11</td>
