--- a/views/my/receiveInfo.ejs
+++ b/views/my/receiveInfo.ejs
@@ -12,7 +12,7 @@
       <%- include('../common/my/header.ejs', {cname: '杭州有才信息技术有限公司'}) %>
       <%- include('../common/my/leftNav.ejs', {page: 'receive'}) %>
       <div class="main-wrap">
-        <ul class="bread-crumb"><li><a href="/my/receive">收到背调</a></li><li class="s">/</li><li>详情</li></ul>
+        <ul class="bread-crumb"><li><a href="/my/receive">收到的背调</a></li><li class="s">/</li><li>详情</li></ul>
         <h2 class="main-title">订单信息</h2>
         <div class="form-action info-action">
           <div class="form-row">
@@ -23,12 +23,12 @@
             <label for="" class="text-lab">部门</label>
             <p class="content">客服部</p>
           </div>
-          <div class="form-row content-row">
+          <div class="form-row">
             <label for="" class="text-lab">核实内容</label>
             <p class="content">工作履历核实</p>
           </div>
           <div class="form-row btn-form-row">
-            <p class="content"><a href="javascript:;" class="btn-main btn-reply">回复</a><a href="javascript:;" class="btn-main btn-notreply">回复</a></p>
+            <p class="content"><a href="/my/reply/10001" class="btn-main btn-reply">回复</a></p>
           </div>
         </div>
       </div>
