--- a/public/src/less/common/base.less
+++ b/public/src/less/common/base.less
@@ -125,10 +125,20 @@ h1, h2, h3, h4, h5, h6 {
   padding-top: 0 !important;
 }
 
+.pl-0 {
+  padding-left: 0 !important;
+}
+
 .btn-hover (@bg, @c: #fff, @offset: 5%) {
   &:hover {
     color: @c;
     background: darken(@bg, @offset);
     text-decoration: none;
+  }
+}
+
+.color-hover (@c: #fff, @offset: 5%) {
+  &:hover {
+    color: darken(@c, @offset);
   }
 }
