--- a/public/src/less/my/send.less
+++ b/public/src/less/my/send.less
@@ -55,6 +55,7 @@ body,html {
             font-size: 14px;
             color: #34495C;
             outline: 0;
+            border-radius: 2px;
           }
           .btn-send {
             #transition;
