--- a/public/src/less/my/sendInfo.less
+++ b/public/src/less/my/sendInfo.less
@@ -33,19 +33,18 @@ body,html {
         }
       }
     }
-    .main-title {
-      margin: 30px 0 26px 30px;
-      color: #34495C;
-      font-size: 16px;
-    }
     .info-action {
-      margin-left: 50px;
+      margin-top: 30px;
+      margin-left: 30px;
       .form-row {
         position: relative;
         display: block;
         width: 100%;
-        margin-top: 20px;
-        padding-left: 100px;
+        margin-top: 14px;
+        padding-left: 140px;
+        line-height: 38px;
+        font-size: 14px;
+        color: #34495C;
         .text-lab {
           position: absolute;
           left: 0;
