--- a/views/my/receive.ejs
+++ b/views/my/receive.ejs
@@ -17,26 +17,26 @@
           <h3>以下是您当前接收到的背调，如实回复背调，将得到一定的积分奖励</h3>
           <table cellspacing="0" cellpadding="0" width="100%">
             <tr>
-              <td class="c-name">深圳腾讯计算机网络有限公司</td>
+              <td class="c-name">宁波市思创颜料有限公司</td>
               <td class="what">向您公司发起了一段背调核实内容(履历核实)</td>
-              <td calss="date">2018.03.15</td>
-              <td class="funcs"><a href="/my/receive/info/10001" clas="btn-detail" target="_blank">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
+              <td calss="date">2018.03.13</td>
+              <td class="funcs"><a href="/my/receive/info/10001" clas="btn-detail" target="_blank">详情</a><a href="/my/reply/10001" clas="btn-reply" target="_blank">回复</a></td>
             </tr>
           </table>
           <table cellspacing="0" cellpadding="0" width="100%">
             <tr>
-              <td class="c-name">深圳腾讯计算机网络有限公司</td>
+              <td class="c-name">杭州龙盈互联网金融信息技术有限公司</td>
               <td class="what">向您公司发起了一段背调核实内容(履历核实)</td>
-              <td calss="date">2018.03.15</td>
-              <td class="funcs"><a href="/my/receive/info/10002" clas="btn-detail" target="_blank">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
+              <td calss="date">2018.03.12</td>
+              <td class="funcs"><a href="/my/receive/info/10002" clas="btn-detail" target="_blank">详情</a><a href="/my/reply/10003" clas="btn-reply" target="_blank">回复</a></td>
             </tr>
           </table>
           <table cellspacing="0" cellpadding="0" width="100%">
             <tr>
-              <td class="c-name">深圳腾讯计算机网络有限公司</td>
+              <td class="c-name">美康生物科技股份有限公司</td>
               <td class="what">向您公司发起了一段背调核实内容(履历核实)</td>
-              <td calss="date">2018.03.15</td>
-              <td class="funcs"><a href="/my/receive/info/10003" clas="btn-detail" target="_blank">详情</a><a href="javascript:;" clas="btn-reply">回复</a><a href="javascript:;" clas="btn-notreply">不回复</a></td>
+              <td calss="date">2018.03.11</td>
+              <td class="funcs"><a href="/my/receive/info/10003" clas="btn-detail" target="_blank">详情</a><a href="/my/reply/10003" clas="btn-reply" target="_blank">回复</a></td>
             </tr>
           </table>
         </div>
