--- a/views/my/index.ejs
+++ b/views/my/index.ejs
@@ -16,25 +16,25 @@
         <div class="qk-info">
           <table width="100%" cellpadding="0" cellspacing="0">
             <tr style="height: 0;">
-              <td style="width: 10%; padding: 0; border: none;"></td>
-              <td style="width: 40%; padding: 0; border: none;"></td>
-              <td style="width: 10%; padding: 0; border: none;"></td>
-              <td style="width: 40%; padding: 0; border: none;"></td>
+              <td style="width: 15%; padding: 0; border: none;"></td>
+              <td style="width: 35%; padding: 0; border: none;"></td>
+              <td style="width: 15%; padding: 0; border: none;"></td>
+              <td style="width: 35%; padding: 0; border: none;"></td>
             </tr>
             <tr>
               <td colspan="4">区块信息</td>
             </tr>
             <tr>
               <td>最新区块</td>
-              <td>10000000.00</td>
+              <td>7761123</td>
               <td>最新不可逆区块</td>
-              <td>10000000.00</td>
+              <td>7761114</td>
             </tr>
             <tr>
-              <td>出具时间</td>
+              <td>出块时间(秒)</td>
               <td>3</td>
               <td>最近缺失</td>
-              <td>3</td>
+              <td>0</td>
             </tr>
           </table>
         </div>
