--- a/views/my/send.ejs
+++ b/views/my/send.ejs
@@ -21,19 +21,19 @@
             </div>
             <div class="form-row">
               <label for="name" class="text-lab">姓名</label>
-              <p class="content"><input type="text" id="name" name="name" class="input-field" placeholder="请填写候选人姓名" /></p>
+              <p class="content"><input type="text" id="name" name="name" class="input-field" placeholder="请填写候选人姓名" maxlength="50" /></p>
             </div>
             <div class="form-row">
               <label for="mobile" class="text-lab">手机</label>
-              <p class="content"><input type="text" id="mobile" name="mobile" class="input-field" placeholder="请填写候选人的手机" /></p>
+              <p class="content"><input type="text" id="mobile" name="mobile" class="input-field" placeholder="请填写候选人的手机" maxlength="11" /></p>
             </div>
             <div class="form-row">
               <label for="email" class="text-lab">邮箱</label>
-              <p class="content"><input type="text" id="email" name="email" class="input-field" placeholder="请填写候选人的邮箱" /></p>
+              <p class="content"><input type="text" id="email" name="email" class="input-field" placeholder="请填写候选人的邮箱" maxlength="50" /></p>
             </div>
             <div class="form-row">
               <label for="companyName" class="text-lab">公司名称</label>
-              <p class="content"><input type="text" id="companyName" name="companyName" class="input-field" placeholder="请填写候选人当时所在的公司名称" /></p>
+              <p class="content"><input type="text" id="companyName" name="companyName" class="input-field" placeholder="请填写候选人当时所在的公司名称" maxlength="100" /></p>
             </div>
             <div class="form-row btn-form-row">
               <label for="" class="text-lab">&nbsp;</label>
