--- a/public/src/less/my/index.less
+++ b/public/src/less/my/index.less
@@ -45,7 +45,7 @@ body,html {
           font-size: 14px;
           line-height: 18px;
           color: #34495C;
-          padding: 15px 32px;
+          padding: 12px 32px;
           border: 1px solid #CBCBCB;
         }
       }
@@ -73,7 +73,7 @@ body,html {
             font-size: 14px;
             line-height: 18px;
             color: #34495C;
-            padding: 15px 30px;
+            padding: 12px 30px;
             border: 1px solid #cbcbcb;
           }
         }
@@ -113,6 +113,7 @@ body,html {
               color: #fff;
               font-size: 14px;
               padding: 6px 8px;
+              border-radius: 2px;
             }
           }
         }
