--- a/views/my/index.ejs
+++ b/views/my/index.ejs
@@ -42,43 +42,19 @@
           <div class="members">
             <table width="100%" cellpadding="0" cellspacing="0">
               <tr class="head">
-                <td colspan="2">联盟理事成员</td>
+                <td colspan="2">联盟理事会成员</td>
               </tr>
               <tr class="gray">
-                <td>最新区块</td>
                 <td>账户</td>
+                <td>总票数</td>
               </tr>
               <tr>
                 <td>ibeidiao</td>
-                <td>3000000.00</td>
+                <td>50,015,126.00</td>
               </tr>
               <tr class="gray">
-                <td>ibeidiao</td>
-                <td>3000000.00</td>
-              </tr>
-              <tr>
-                <td>ibeidiao</td>
-                <td>3000000.00</td>
-              </tr>
-              <tr class="gray">
-                <td>ibeidiao</td>
-                <td>3000000.00</td>
-              </tr>
-              <tr>
-                <td>ibeidiao</td>
-                <td>3000000.00</td>
-              </tr>
-              <tr class="gray">
-                <td>ibeidiao</td>
-                <td>3000000.00</td>
-              </tr>
-              <tr>
-                <td>ibeidiao</td>
-                <td>3000000.00</td>
-              </tr>
-              <tr class="gray">
-                <td>ibeidiao</td>
-                <td>3000000.00</td>
+                <td>猎聘</td>
+                <td>50,002,160.00</td>
               </tr>
             </table>
           </div>
@@ -99,32 +75,32 @@
               </tr>
               <tr>
                 <td><span class="t">发起数据交易</span></td>
-                <td><p><span>shodihoashd</span> 发起了背调请求</p></td>
+                <td><p><span>beysion</span> 发起了背调请求</p></td>
                 <td>2018.02.13</td>
               </tr>
               <tr class="gray">
                 <td><span class="t">数据存证</span></td>
-                <td><p><span>woshdhuai</span> 验证了 shodihoashd 的背调请求</p></td>
+                <td><p><span>maomaochong</span> 验证了 beysion 的背调请求</p></td>
                 <td>2018.02.13</td>
               </tr>
               <tr>
                 <td><span class="t">数据支付</span></td>
-                <td><p><span>shodihoashd</span> 支付了100积分接收了背调验证</p></td>
+                <td><p><span>beysion</span> 支付了100积分购买背调服务给 maomaochong</p></td>
                 <td>2018.02.13</td>
               </tr>
               <tr>
                 <td><span class="t">发起数据交易</span></td>
-                <td><p><span>shodihoashd</span> 发起了背调请求</p></td>
+                <td><p><span>haitun</span> 发起了背调请求</p></td>
                 <td>2018.02.13</td>
               </tr>
               <tr class="gray">
                 <td><span class="t">数据存证</span></td>
-                <td><p><span>woshdhuai</span> 验证了 shodihoashd 的背调请求</p></td>
+                <td><p><span>hugh111</span> 验证了 haitun 的背调请求</p></td>
                 <td>2018.02.13</td>
               </tr>
               <tr>
                 <td><span class="t">数据支付</span></td>
-                <td><p><span>shodihoashd</span> 支付了100积分接收了背调验证</p></td>
+                <td><p><span>haitun</span> 支付了100积分购买背调服务给 hugh111</p></td>
                 <td>2018.02.13</td>
               </tr>
             </table>
