--- a/public/src/less/common/my-common.less
+++ b/public/src/less/common/my-common.less
@@ -18,7 +18,6 @@
     float: right;
     .top {
       font-size: 0;
-      margin-right: 60px;
       .user-head {
         display: inline-block;
         height: 42px;
@@ -35,17 +34,62 @@
         color: #34495c;
         margin-left: 10px;
         cursor: pointer;
+        padding-right: 16px;
         &::after {
           display: block;
           position: absolute;
           content: "";
-          right: -16px;
+          right: 0;
           top: 19px;
           border: solid transparent 4px;
           border-top-color: #A1A1A1;
           cursor: pointer;
           #transition;
           transform-origin: 50% 25%;
+        }
+        &:hover {
+          &::after {
+            transform: rotate(180deg);  
+            transform-origin: 50% 30% 0;  
+            transition: transform 0.2s ease-in 0s;
+          }
+          ul {
+            opacity: 1;
+            height: 86px;
+            width: 100%;
+          }
+        }
+        ul {
+          height: 0;
+          opacity: 0;
+          position: absolute;
+          top: 40px;
+          left: 0;
+          width: 0;
+          min-width: 130px;
+          list-style: none;
+          background-color: #fff;
+          padding: 8px 0;
+          box-shadow: 0px 0px 12px 0px rgba(201, 201, 201, 0.6);
+          #transition;
+          li {
+            line-height: 35px;
+            padding: 0 20px;
+            a {
+              font-size: 14px;
+              display: block;
+              color: #34495C;
+              background-repeat: no-repeat;
+              background-position: left center;
+              padding-left: 25px;
+              &.account {
+                background-image: url(../../images/header/account.png);
+              }
+              &.logout {
+                background-image: url(../../images/header/logout.png);
+              }
+            }
+          }
         }
       }
       &.show {
