--- a/public/src/less/widgets/tip.less
+++ b/public/src/less/widgets/tip.less
@@ -1,8 +1,9 @@
 .tip-outer-wrap {
-	position: absolute;
+	position: fixed;
 	left: 0;
 	right: 0;
 	text-align: center;
+	z-index: 301;
 	.tip-wrap {
 		display: inline-block;
 		position: relative;
