--- a/views/my/reply.ejs
+++ b/views/my/reply.ejs
@@ -30,9 +30,9 @@
             <div class="form-row">
               <label for="" class="text-lab">供职时间</label>
               <p class="content date-content">
-                <input type="text" id="startDate" name="startDate" class="input-field small" placeholder="开始时间" />
+                <input type="text" id="startDate" name="startDate" class="input-field small" placeholder="开始时间" readonly="readonly" />
                 <span>-</span>
-                <input type="text" id="endDate" name="endDate" class="input-field small" placeholder="结束时间" />
+                <input type="text" id="endDate" name="endDate" class="input-field small" placeholder="结束时间" readonly="readonly" />
               </p>
             </div>
             <div class="form-row">
