--- a/views/my/orderList.ejs
+++ b/views/my/orderList.ejs
@@ -8,6 +8,7 @@
     <% } %>
   </head>
   <body>
+  <input type="hidden" id="type" name="name" value="<%= type %>" />
     <div class="page-wrap">
       <%- include('../common/my/header.ejs', {cname: '杭州有才信息技术有限公司'}) %>
       <%- include('../common/my/leftNav.ejs', {page: 'orderList'}) %>
@@ -16,12 +17,12 @@
         <div class="tab clearfix2">
           <div class="tab-switchs">
             <ul>
-              <li class="active"><a href="javascript:;">发起的背调</a></li>
+              <li><a href="javascript:;">发起的背调</a></li>
               <li><a href="javascript:;">接收的背调</a></li>
             </ul>
           </div>
           <div class="tab-contents">
-            <div class="tab-content active">
+            <div class="tab-content">
               <table width="100%" cellpadding="0" cellspacing="0">
                 <thead>
                   <tr>
