--- a/public/src/less/widgets/popup.less
+++ b/public/src/less/widgets/popup.less
@@ -6,10 +6,8 @@
   height: 100%;
   left: 0;
   top: 0;
-  background-color: #000;
+  background-color: #fff;
   z-index: 201;
-  filter: alpha(opacity=40);
-	-moz-opacity: 0.4;;
 	opacity: 0.4;;
   transition: opacity 0.2s ease-out;
 }
