--- a/views/common/front-header.ejs
+++ b/views/common/front-header.ejs
@@ -1,7 +1,7 @@
 <header class="container-fluid clearfix front-header">
     <div class="row">
       <div class="col-12">
-        <a href="/" class="logo" title="去中心化的职业信用联盟"></a>
+        <a href="/" class="logo" title="职业信用联盟"></a>
         <i class="icon-nav-btn"></i>
         <ul class="nav-links">
           <li><a href="#top">首页</a></li>
