--- a/views/my/reply.ejs
+++ b/views/my/reply.ejs
@@ -17,11 +17,11 @@
         <div class="form-action info-action">
           <div class="form-row">
             <label for="" class="text-lab">姓名</label>
-            <p class="content">刘小美</p>
+            <p class="content"><%= name %></p>
           </div>
           <div class="form-row">
             <label for="" class="text-lab">部门</label>
-            <p class="content">客服部</p>
+            <p class="content"><%= dept %></p>
           </div>
         </div>
         <h2 class="main-title">履历信息</h2>
