--- a/views/my/receiveInfo.ejs
+++ b/views/my/receiveInfo.ejs
@@ -17,18 +17,18 @@
         <div class="form-action info-action">
           <div class="form-row">
             <label for="" class="text-lab">姓名</label>
-            <p class="content">刘小美</p>
+            <p class="content"><%= name %></p>
           </div>
           <div class="form-row">
             <label for="" class="text-lab">部门</label>
-            <p class="content">客服部</p>
+            <p class="content"><%= dept %></p>
           </div>
           <div class="form-row">
             <label for="" class="text-lab">核实内容</label>
             <p class="content">工作履历核实</p>
           </div>
           <div class="form-row btn-form-row">
-            <p class="content"><a href="/my/reply/10001" class="btn-main btn-reply">回复</a></p>
+            <p class="content"><a href="/my/reply/<%= id %>" class="btn-main btn-reply">回复</a></p>
           </div>
         </div>
       </div>
