--- a/views/my/info.ejs
+++ b/views/my/info.ejs
@@ -4,7 +4,7 @@
     <%- include('../common/head.ejs') %>
     <title><%= title %>职业信用联盟</title>
     <% if (env !== 'dev') { %>
-      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/my/info.css?v=<%= ts %>">
+      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/myInfo.css?v=<%= ts %>">
     <% } %>
   </head>
   <body>
@@ -19,22 +19,22 @@
             <p class="text-p">ibeidiao</p>
           </div>
           <div class="text-wrap">
-              <label for="" class="text-lab">公司名称</label>
-              <p class="text-p">杭州有才信息技术有限公司</p>
+            <label for="" class="text-lab">公司名称</label>
+            <p class="text-p">杭州有才信息技术有限公司</p>
           </div>
           <div class="text-wrap">
-              <label for="" class="text-lab">手机</label>
-              <p class="text-p">13989486252</p>
+            <label for="" class="text-lab">手机</label>
+            <p class="text-p">13989486252</p>
           </div>
           <div class="text-wrap">
-              <label for="" class="text-lab">邮箱</label>
-              <p class="text-p">info@ibeidiao.com</p>
+            <label for="" class="text-lab">邮箱</label>
+            <p class="text-p">info@ibeidiao.com</p>
           </div>
           <div class="text-wrap">
               <label for="" class="text-lab">私钥</label>
               <p class="text-p text-self-password">
-                  <input type="password" readonly value="5Jvqsujc5BWfLv7wWJAYDeyA2ShCutCrEm5jarx8GsZQkDjw8Gh" />
-                  <a href="javascript:;" class="btn-eye chainio-icon-eye-off iconfont"></a>
+                <input type="password" readonly value="5Jvqsujc5BWfLv7wWJAYDeyA2ShCutCrEm5jarx8GsZQkDjw8Gh" />
+                <a href="javascript:;" class="btn-eye chainio-icon-eye-off iconfont"></a>
               </p>
           </div>
         </form>
