--- a/views/my/receiveInfo.ejs
+++ b/views/my/receiveInfo.ejs
@@ -4,7 +4,7 @@
     <%- include('../common/head.ejs') %>
     <title><%= title %>职业信用联盟</title>
     <% if (env !== 'dev') { %>
-      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/my/receiveInfo.css?v=<%= ts %>">
+      <link rel="stylesheet" type="text/css" charset="utf-8" href="/dist/css/receiveInfo.css?v=<%= ts %>">
     <% } %>
   </head>
   <body>
