--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -93,16 +93,16 @@
         border-radius: 4px;
         padding-right: 38px;
         margin: 60px auto 18px;
+        overflow: hidden;
         .private-key {
           width: 100%;
-          height: 100%;
+          height: 36px;
           border: none;
           padding: 0 18px;
           color: #7b858e;
           font-size: 14px;
           line-height: normal;
           outline: 0;
-          border-radius: 4px;
         }
         .btn-eye {
           position: absolute;
