--- a/public/src/less/common/my-common.less
+++ b/public/src/less/common/my-common.less
@@ -75,6 +75,9 @@
           li {
             line-height: 35px;
             padding: 0 20px;
+            &:hover {
+              background: #e8ebec;
+            }
             a {
               font-size: 14px;
               display: block;
