--- a/public/src/less/login.less
+++ b/public/src/less/login.less
@@ -61,7 +61,7 @@
     margin: auto;
     .top-wrap {
       position: relative;
-      padding-bottom: 98px;
+      padding-bottom: 166px;
       &::after {
         position: absolute;
         display: block;
@@ -71,6 +71,7 @@
         height: 1px;
         width: 182px;
         background: #e4e4e4;
+        clear: both;
       }
       .main-title {
         font-size: 18px;
@@ -117,7 +118,7 @@
         }
       }
       .btn-login {
-        display: inline-block;
+        display: block;
         height: 34px;
         line-height: 34px;
         border-radius: 17px;
@@ -126,6 +127,7 @@
         font-size: 14px;
         text-align: center;
         padding: 0 20px;
+        float: left;
         &:hover {
           background: darken(#39b0a5, 5%);
         }
