--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,11 +11,11 @@
   <input type="hidden" id="returnUrl" name="returnUrl" value="<%= returnUrl %>" />
     <div class="page-wrap">
       <div class="main-wrap">
-        <div class="top-wrap">
+        <div class="top-wrap clearfix">
           <h3 class="main-title">欢迎进入</h3>
           <a href="/" class="logo"></a>
           <p class="input-wrap">
-              <input type="password" class="private-key" placeholder="请在此输入您的私钥" value="5Jvqsujc5BWfLv7wWJAYDeyA2ShCutCrEm5jarx8GsZQkDjw8Gh" />
+              <input type="password" class="private-key" placeholder="请在此输入您的私钥" value="5Jvqsujc5BWfLv7wWJAYDeyA2S" />
               <a href="javascript:;" class="btn-eye chainio-icon-eye-off iconfont"></a>
           </p>
           <a href="javascript:;" class="btn-login">导入</a>
