--- a/views/my/points.ejs
+++ b/views/my/points.ejs
@@ -14,7 +14,7 @@
       <div class="main-wrap">
         <h2 class="main-title">背调积分</h2>
         <p class="point">1000</p>
-        <div class="funcs"><a href="javascript:;" class="btn-cz">充值</a></div>
+        <div class="funcs clearfix"><a href="javascript:;" class="btn-cz">充值</a></div>
         <div class="remark">
           <i class="iconfont chainio-icon-gantanhao"></i>
           <ul>
