--- a/public/src/less/my/points.less
+++ b/public/src/less/my/points.less
@@ -11,6 +11,8 @@ body,html {
   width: 100%;
   background: #f6f6f6;
   padding: 127px 80px 0 293px;
+  min-width: 1200px;
+  overflow-y: auto;
   .main-wrap {
     width: 100%;
     height: 300px;
@@ -37,6 +39,8 @@ body,html {
     .funcs {
       margin-top: 25px;
       a {
+        display: block;
+        float: left;
         color: #EA693D;
         font-size: 16px;
         margin-right: 30px;
