--- a/public/src/less/my/receive.less
+++ b/public/src/less/my/receive.less
@@ -11,6 +11,8 @@ body,html {
   width: 100%;
   background: #f6f6f6;
   padding: 127px 80px 0 293px;
+  min-width: 1200px;
+  overflow-y: auto;
   .main-wrap {
     width: 100%;
     min-height: 500px;
@@ -34,7 +36,10 @@ body,html {
 				table-layout: fixed;
 				margin-top: 18px;
 				tr {
-					border: 1px solid #E7E7EB;
+          border: 1px solid #E7E7EB;
+          &:hover {
+            background: #f6f8f9;
+          }
 				}
 				td {
 					font-size: 14px;
