--- a/public/src/less/my/send.less
+++ b/public/src/less/my/send.less
@@ -10,6 +10,8 @@ body,html {
   width: 100%;
   background: #f6f6f6;
   padding: 127px 80px 0 293px;
+  min-width: 1200px;
+  overflow-y: auto;
   .main-wrap {
     width: 100%;
     min-height: 500px;
