--- a/public/src/less/common/my-common.less
+++ b/public/src/less/common/my-common.less
@@ -152,6 +152,14 @@
         a {
           display: block;
         }
+        &.active {
+          a {
+            color: #38A5A7;
+            .iconfont {
+              color: #38A5A7;
+            }
+          }
+        }
       }
       dd {
         display: block;
