--- a/views/my/index.ejs
+++ b/views/my/index.ejs
@@ -10,7 +10,7 @@
   <body>
     <div class="page-wrap">
       <%- include('../common/my/header.ejs', {cname: '杭州有才信息技术有限公司'}) %>
-      <%- include('../common/my/leftNav.ejs', {page: ''}) %>
+      <%- include('../common/my/leftNav.ejs', {page: 'index'}) %>
       <div class="main-wrap">
         <h2 class="main-title">联盟链信息</h2>
         <div class="qk-info">
