--- a/public/src/less/my/orderList.less
+++ b/public/src/less/my/orderList.less
@@ -65,7 +65,10 @@ body,html {
 					table {
 						table-layout: fixed;
 						border: 1px solid #E7E7EB;
-						border-bottom: none;
+            border-bottom: none;
+            tr:hover {
+              background: #f6f8f9;
+            }
 						th, td {
 							font-size: 14px;
 							color: #3E4D55;
@@ -73,14 +76,14 @@ body,html {
 							padding: 14px 0 14px 20px;
 							a {
 								font-size: 14px;
-								color: #3E4D55;
+								color: #42BAAE;
 								margin-right: 24px;
 							}
 						}
 						th {
 							background-color: #F4F5F9;
 							vertical-align: middle;
-							text-align: left;
+              text-align: left;
 						}
 					}
 				}
