--- a/public/src/less/my/receive.less
+++ b/public/src/less/my/receive.less
@@ -57,7 +57,7 @@ body,html {
 					}
 					a {
 						font-size: 14px;
-						color: #738698;
+						color: #42BAAE;
 						margin-right: 14px;
 						&:last-child {
 							margin-right: 0;
