--- a/views/my/orderList.ejs
+++ b/views/my/orderList.ejs
@@ -17,8 +17,8 @@
         <div class="tab clearfix2">
           <div class="tab-switchs">
             <ul>
-              <li><a href="javascript:;">发起的背调</a></li>
-              <li><a href="javascript:;">接收的背调</a></li>
+              <li><a href="javascript:;">发起背调</a></li>
+              <li><a href="javascript:;">背调请求</a></li>
             </ul>
           </div>
           <div class="tab-contents">
