--- a/public/src/less/my/points.less
+++ b/public/src/less/my/points.less
@@ -70,6 +70,9 @@ body,html {
       table-layout: fixed;
       border: 1px solid #E7E7EB;
       border-bottom: none;
+      tr:hover {
+        background: #f6f8f9;
+      }
       th, td {
         font-size: 14px;
         color: #3E4D55;
