--- a/public/src/less/common/my-common.less
+++ b/public/src/less/common/my-common.less
@@ -116,9 +116,14 @@
     // margin: auto;
     .items-wrap {
       position: relative;
-      padding-bottom: 32px;
-      margin-bottom: 32px;
+      padding-bottom: 26px;
+      margin-bottom: 28px;
       // border-bottom: #c7d9eb 1px solid;
+      dl.no-child {
+        dt {
+          margin: 0;
+        }
+      }
       &::after {
         position: absolute;
         display: block;
