--- a/views/common/my/leftNav.ejs
+++ b/views/common/my/leftNav.ejs
@@ -1,7 +1,7 @@
 <div class="my-left-nav">
   <ul class="list-wrap">
     <li class="items-wrap">
-      <dl>
+      <dl class="no-child">
           <dt  class="<% if(page === 'index') { %>active<% } %>"><a href="/my/index"><i class="chainio-icon-trumpet iconfont"></i>联盟链</a></dt>
         </dl>
     </li>
